add form and set submit event handler

--- a/index.html
+++ b/index.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/scripts.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css"type="text/css">
     <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
+    <script src="js/scripts.js" type="text/javascript"></script>
     <meta charset="utf-8">
     <title>Track Suggester</title>
   </head>
   <body>
     <div class="container">
-
+      <h1>Welcome to my Track suggester!</h1>
+      <p>Below I will give you 5 questions about yourself.</p>
+      <p>These questions will determine which Track at Epicodus might be right for you!</p>
+      <h3>Which one of these options do you like best?</h3>
+      <form id="form1">
+        <select class="form-control" id="answer1">
+          <option>asfasfgad</option>
+          <option>fgdshgsfhs</option>
+        </select>
+        <h3>sadasf</h3>
+        <select class="form-control" id="answer2">
+          <option>asfasfgad</option>
+          <option>fgdshgsfhs</option>
+        </select>
+        <h3>231</h3>
+        <select class="form-control" id="answer3">
+          <option>asfasfgad</option>
+          <option>fgdshgsfhs</option>
+        </select>
+        <h3>233</h3>
+        <select class="form-control" id="answer4">
+          <option>asfasfgad</option>
+          <option>fgdshgsfhs</option>
+        </select>
+        <h3>235</h3>
+        <select class="form-control" id="answer5">
+          <option>asfasfgad</option>
+          <option>fgdshgsfhs</option>
+        </select>
+        <button type="submit" class="button">Calculate!</button>
+      </form>
     </div>
   </body>
 </html>
