add submit button, change questions and answers.

--- a/index.html
+++ b/index.html
@@ -13,34 +13,42 @@
       <h1>Welcome to my Track suggester!</h1>
       <p>Below I will give you 5 questions about yourself.</p>
       <p>These questions will determine which Track at Epicodus might be right for you!</p>
-      <h3>Which one of these options do you like best?</h3>
+      <h3>Do you like figuring out how things work?</h3>
       <form id="form1">
-        <select class="form-control" id="answer1">
-          <option>asfasfgad</option>
-          <option>fgdshgsfhs</option>
+        <select class="form-control" id="userInput1">
+          <option>Yes</option>
+          <option>No not really</option>
+          <option>I don't know</option>
         </select>
-        <h3>sadasf</h3>
-        <select class="form-control" id="answer2">
-          <option>asfasfgad</option>
-          <option>fgdshgsfhs</option>
+        <h3>Do you like styling things or like the way apps show their content?</h3>
+        <select class="form-control" id="userInput2">
+          <option>Yes</option>
+          <option>No not really</option>
+          <option>I don't know</option>
         </select>
-        <h3>231</h3>
-        <select class="form-control" id="answer3">
-          <option>asfasfgad</option>
-          <option>fgdshgsfhs</option>
+        <h3>Are you interested in mobile development?</h3>
+        <select class="form-control" id="userInput3">
+          <option>Yes</option>
+          <option>No</option>
+          <option>I don't know</option>
         </select>
-        <h3>233</h3>
-        <select class="form-control" id="answer4">
-          <option>asfasfgad</option>
-          <option>fgdshgsfhs</option>
+        <h3>Do you like working with people in a team?</h3>
+        <select class="form-control" id="userInput4">
+          <option>yes</option>
+          <option>no</option>
+          <option>I don't know</option>
         </select>
-        <h3>235</h3>
-        <select class="form-control" id="answer5">
-          <option>asfasfgad</option>
-          <option>fgdshgsfhs</option>
+        <h3>Do you like problem solving?</h3>
+        <select class="form-control" id="userInput5">
+          <option>yes</option>
+          <option>no</option>
+          <option>I don't know</option>
         </select>
         <button type="submit" class="button">Calculate!</button>
       </form>
+      <div class="suggestion">
+
+      </div>
     </div>
   </body>
 </html>
