--- a/index.html
+++ b/index.html
@@ -15,34 +15,29 @@
       <p>These questions will determine which Track at Epicodus might be right for you!</p>
       <h3>Do you like figuring out how things work?</h3>
       <form id="form1">
-        <select class="form-control" id="userInput1">
-          <option>Yes</option>
-          <option>No not really</option>
-          <option>I don't know</option>
-        </select>
-        <h3>Do you like styling things or like the way apps show their content?</h3>
-        <select class="form-control" id="userInput2">
-          <option>Yes</option>
-          <option>No not really</option>
-          <option>I don't know</option>
-        </select>
-        <h3>Are you interested in mobile development?</h3>
-        <select class="form-control" id="userInput3">
+        <select class="form-control" id="backend">
           <option>Yes</option>
           <option>No</option>
-          <option>I don't know</option>
+        </select>
+        <h3>Do you like styling things or like the way apps show their content?</h3>
+        <select class="form-control" id="frontend">
+          <option>Yes</option>
+          <option>No</option>
+        </select>
+        <h3>Are you interested in mobile development?</h3>
+        <select class="form-control" id="android">
+          <option>Yes</option>
+          <option>No</option>
         </select>
         <h3>Do you like working with people in a team?</h3>
-        <select class="form-control" id="userInput4">
-          <option>yes</option>
-          <option>no</option>
-          <option>I don't know</option>
+        <select class="form-control" id="team">
+          <option>Yes</option>
+          <option>No</option>
         </select>
         <h3>Do you like problem solving?</h3>
-        <select class="form-control" id="userInput5">
-          <option>yes</option>
-          <option>no</option>
-          <option>I don't know</option>
+        <select class="form-control" id="problemSolve">
+          <option>Yes</option>
+          <option>No</option>
         </select>
         <button type="submit" class="button">Calculate!</button>
       </form>
