add columns and rows for answers, add ability to hide all other answers when getting an answer

--- a/index.html
+++ b/index.html
@@ -42,7 +42,31 @@
         <button type="submit" class="button">Calculate!</button>
       </form>
       <div class="suggestion">
-
+        <div class="row">
+          <div class="col-md-4">
+            <div class="rubyRails">
+              <p>asdasd</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="cssReact">
+              <p>asdasd</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="javaAndroid">
+              <p>asdasd</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="reccomendation">
+            <p>boodfsdgsdsd</p>
+          </div>
+          <div class="information">
+            <p>sfdgsdhsfdhdgfhdfhjd</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
