add information to all columns and rows for appropriate response, add links for information about epicodus

--- a/index.html
+++ b/index.html
@@ -45,26 +45,29 @@
         <div class="row">
           <div class="col-md-4">
             <div class="rubyRails">
-              <p>asdasd</p>
+              <h2>Ruby/Rails Course</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="cssReact">
-              <p>asdasd</p>
+              <h2>CSS/React Course</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="javaAndroid">
-              <p>asdasd</p>
+              <h2>Java/Android Course</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="reccomendation">
-            <p>boodfsdgsdsd</p>
+            <p>If you do like working with people but don't really know what to expect here's a <a href="https://www.epicodus.com/what-to-expect/">link</a> to show you what Epicodus is like</p>
           </div>
           <div class="information">
-            <p>sfdgsdhsfdhdgfhdfhjd</p>
+            <p>This link <a href="https://www.epicodus.com/blog/what-programming-language-should-i-learn">here</a> will take you to information about Epicodus so that you might become more interested in Coding!</p>
           </div>
         </div>
       </div>
