--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
             <div class="col-md-4">
               <div class="rubyRails">
                 <h2>Ruby/Rails Course</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Ruby is a programming language focused on simplicity and productivity. It has an elegant syntax that is natural to read and easy to write. The Ruby programming language is most commonly used with the Ruby on Rails framework. Ruby and Rails are typically used by younger companies and startups, especially for building interactive web applications. Companies using Ruby and Rails who have hired Epicodus graduates include New Relic, LivingSocial, and SpendWell.</p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="cssReact">
                 <h2>CSS/React Course</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>CSS is the language for describing the presentation of Web pages, including colors, layout, fonts, and other stylistic choices. It allows one to adapt the presentation to different types of devices, such as large screens, small screens, and printers. HTML — used for building the structure of the page — and CSS — used for the visual layout — are the two basic languages involved in the building of web pages and web applications.</p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="javaAndroid">
                 <h2>Java/Android Course</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Java is arguably the most popular programming language today. It's used for everything from web applications to backend services to mobile applications to embedded systems. Students who learn Java programming will be able to create dynamic web applications, and be able continue into our Android track. Companies using Java who have hired Epicodus graduates include Nike and Thetus.</p>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="reccomendation">
-              <p>If you do like working with people but don't really know what to expect here's a <a href="https://www.epicodus.com/what-to-expect/">link</a> to show you what Epicodus is like</p>
+              <p>If you don't really know what to expect here's a <a href="https://www.epicodus.com/what-to-expect/">link</a> to show you what Epicodus is like</p>
             </div>
             <div class="information">
               <p>This link <a href="https://www.epicodus.com/blog/what-programming-language-should-i-learn">here</a> will take you to information about Epicodus so that you might become more interested in Coding!</p>
